# ncvm_rust

./: .gitignore  .gitmodules  Cargo.toml  build.rs  min_build.sh  perf_test.asm  perf_test.ncvm
examples/: dev.rs
examples/libs/: mac_arm64.dylib
ncvm-derive/: Cargo.toml
ncvm-derive/src/: lib.rs
src/: clib_ncvm.rs  lib.rs  main.rs  ncvm.rs
